# Document-Modification

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/skills/doc-automation-runner/: SKILL.md
.claude/skills/document-modification/: SKILL.md
.claude/skills/template-tokenizer/: SKILL.md
claude_assistant/: README.md  pyproject.toml
claude_assistant/docs/: walkthrough.md
claude_assistant/specs/: design.md  implementation_plan.md  requirements.md  user_story.md
claude_assistant/src/: models.py
claude_assistant/tests/unit/: test_models.py
data/: _mapping_new_tokens.yaml  _sakil_only.xlsx  _starter_invitation.xlsx  _suzuki_only.xlsx  all_people.xlsx  sample_data.xlsx  sample_data_from_sheet.xlsx  sample_data_gdrive.xlsx  sample_data_starter.xlsx  starter_invitation.xlsx  todo_djl.xlsx
docs/: slack_integration_setup.md
settings/: sample_data.json
specs/: design.md  implementation_plan.md  requirements.md  user_story.md
src/: claude_test.py  slack_notifier.py
src/doc_modifier/: __init__.py  __main__.py  cli.py  docx_replacer.py  pdf_exporter.py  pipeline.py  process_google_sheet.py  tokenize_cli.py  tokenize_template.py  xlsx_loader.py  xlsx_replacer.py
src/spread_sheet/: autorequest.gs
src/uploader/: upload_to_drive.py  upload_via_mcp.py
tests/: test_docx_replacer.py
